modified:   plantin/src/App.js 	modified:   plantin/src/Webpages/AdminLogin.js 	modified:   plantin/src/Webpages/AdminPage.js 	modified:   plantin/src/Webpages/Category.js 	modified:   plantin/src/Webpages/Login.js 	modified:   plantin/src/Webpages/Post.css 	modified:   plantin/src/Webpages/Post.js 	modified:   plantin/src/Webpages/PostComments.js 	modified:   plantin/src/Webpages/PostCommentsEdit.js 	modified:   plantin/src/Webpages/PostInDetail.css 	modified:   plantin/src/Webpages/PostInDetail.js 	modified:   plantin/src/Webpages/Profile.js 	modified:   plantin/src/Webpages/ProfileEdit.js 	modified:   plantin/src/Webpages/Signup.js 	modified:   plantin/src/Webpages/Uploadpopup.js 	modified:   server/index.js

--- a/plantin/src/Webpages/PostInDetail.css
+++ b/plantin/src/Webpages/PostInDetail.css
@@ -28,6 +28,14 @@
   gap: 30px;
 }
 
+.postindetaildiv .postindetailtitle {
+  font-weight: bold;
+}
+
+.postindetaildiv .postindetaildes {
+  white-space: break-spaces;
+}
+
 .postdownloadbtn {
   width: 100px;
   height: 30px;
