--- a/plantin/src/Webpages/Post.css
+++ b/plantin/src/Webpages/Post.css
@@ -2,8 +2,8 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 60px;
-  padding-bottom: 40px;
+  gap: 50px;
+  padding-bottom: 20px;
 }
 
 .cardscontainer {
@@ -13,6 +13,7 @@
   transition: 0.5s ease-in-out;
   overflow: hidden;
   background-color: white;
+  margin-bottom: 20px;
 }
 
 .cardscontainer:hover {
