--- a/plantin/src/Webpages/Uploadpopup.css
+++ b/plantin/src/Webpages/Uploadpopup.css
@@ -97,16 +97,7 @@
   cursor: pointer;
 }
 
-.uploadaddcategory {
-  width: max-content;
-  height: 61px;
-  position: relative;
-  left: 135px;
-  bottom: 252px;
-  z-index: 10;
-}
-
-.uploadaddcategory .addcategoryinput {
+.addcategoryinput {
   width: 100%;
   height: 30px;
   border: 1px solid #0275d8;
@@ -114,13 +105,13 @@
   padding: 0px 10px;
 }
 
-.uploadaddcategory p {
+.categoryerror {
   color: red;
   position: relative;
   top: 3px;
 }
 
-.uploadaddcategory .addcategorycancel {
+.addcategorycancel {
   width: 55px;
   height: max-content;
   float: right;
@@ -132,7 +123,8 @@
   background-color: #0275d8;
   border-radius: 5px;
 }
-.uploadaddcategory .addcategorysubmit {
+
+.addcategorysubmit {
   width: 55px;
   height: max-content;
   float: right;
