--- a/plantin/src/Webpages/Accountpopupcss.css
+++ b/plantin/src/Webpages/Accountpopupcss.css
@@ -1,14 +1,13 @@
 .accountpopupmain {
   background-color: white;
   width: 190px;
-  height: 210px;
+  height: max-content;
   position: fixed;
   z-index: 8;
   top: 70px;
   right: 50px;
   border-radius: 10px;
   padding: 0px 15px;
-  /* border: 1px solid rgb(207, 205, 205); */
 }
 
 .useraccount {
@@ -24,10 +23,11 @@
 }
 
 .navpages {
-  height: 160px;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
+  gap: 10px;
+  padding: 10px 0px;
 }
 
 .navpageslink {
