--- a/plantin/src/Webpages/AdminPage.css
+++ b/plantin/src/Webpages/AdminPage.css
@@ -2,17 +2,38 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 20px;
+  gap: 50px;
   padding-top: 120px;
-  padding-bottom: 40px;
+  padding-bottom: 20px;
 }
 
 .admincardscontainer {
   width: 295px;
-  height: 350px;
+  height: 355px;
   border-radius: 5px 5px 0px 0px;
   transition: 0.5s ease-in-out;
+  overflow: hidden;
   background-color: white;
+}
+
+.admincardscontainer .username {
+  width: 100%;
+  height: max-content;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  padding: 5px 10px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
+.admincardscontainer .username .icons {
+  opacity: 75%;
+}
+
+.admincardscontainer .username p {
+  color: rgb(85, 85, 85);
+  font-weight: bold;
 }
 
 .adminmap {
@@ -25,8 +46,7 @@
 
 .admincardimage {
   width: 100%;
-  height: 200px;
-  text-align: center;
+  height: 165px;
 }
 
 .adminimage {
@@ -37,19 +57,18 @@
 
 .admincardcontent {
   width: 100%;
-  height: 150px;
-  padding: 10px;
+  height: 145px;
+  padding: 0px 10px;
   overflow: hidden;
 }
 
 .admincardtitle {
-  font-weight: bold;
+  font-weight: 500;
   margin-bottom: 10px;
 }
 
 .admincarddescription {
-  line-height: 21px;
-  text-align: justify;
+  white-space: break-spaces;
 }
 
 .admindelebtn {
