--- a/plantin/src/Webpages/Profile.css
+++ b/plantin/src/Webpages/Profile.css
@@ -2,17 +2,37 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 20px;
+  gap: 50px;
   padding-top: 120px;
-  padding-bottom: 40px;
+  padding-bottom: 20px;
 }
 
 .profilecardscontainer {
   width: 295px;
-  height: 350px;
+  height: 355px;
   border-radius: 5px 5px 0px 0px;
   background-color: white;
   overflow: hidden;
+}
+
+.profilecardscontainer .username {
+  width: 100%;
+  height: max-content;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  padding: 5px 10px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
+.profilecardscontainer .username .icons {
+  opacity: 75%;
+}
+
+.profilecardscontainer .username p {
+  color: rgb(85, 85, 85);
+  font-weight: bold;
 }
 
 .profilemap {
@@ -25,8 +45,7 @@
 
 .profilecardimage {
   width: 100%;
-  height: 200px;
-  text-align: center;
+  height: 165px;
 }
 
 .profileimage {
@@ -37,18 +56,18 @@
 
 .profilecardcontent {
   width: 100%;
-  height: 100%;
-  padding: 10px;
+  height: 145px;
+  padding: 0px 10px;
+  overflow: hidden;
 }
 
 .profilecardtitle {
-  font-weight: bold;
+  font-weight: 500;
   margin-bottom: 10px;
 }
 
 .profilecarddescription {
-  line-height: 21px;
-  text-align: justify;
+  white-space: break-spaces;
 }
 
 .profileedtbtn {
