--- a/plantin/src/Webpages/Uploadpopup.css
+++ b/plantin/src/Webpages/Uploadpopup.css
@@ -70,12 +70,12 @@
 
 .cancelbtn {
   border: none;
-  color: white;
-  background-color: #0275d8;
+  color: black;
+  background-color: white;
   border-radius: 5px;
   width: 100px;
   height: 30px;
-  margin-left: 36%;
+  float: right;
 }
 
 .uploadbtn {
@@ -85,7 +85,7 @@
   border-radius: 5px;
   width: 100px;
   height: 30px;
-  margin-left: 15px;
+  float: right;
 }
 
 .upload,
@@ -119,8 +119,8 @@
   margin-top: 10px;
   margin-right: 15px;
   border: none;
-  color: white;
-  background-color: #0275d8;
+  color: black;
+  background-color: white;
   border-radius: 5px;
 }
 
