--- a/plantin/src/Webpages/AdminPage.css
+++ b/plantin/src/Webpages/AdminPage.css
@@ -60,7 +60,6 @@
   height: 145px;
   padding: 0px 10px;
   overflow: hidden;
-  margin-bottom: 5px;
 }
 
 .admincardtitle {
@@ -70,6 +69,8 @@
 
 .admincarddescription {
   white-space: break-spaces;
+  line-height: 22px;
+  text-align: justify;
 }
 
 .admindelebtn {
