--- a/plantin/src/Webpages/Post.css
+++ b/plantin/src/Webpages/Post.css
@@ -57,7 +57,6 @@
   height: 145px;
   padding: 0px 10px;
   overflow: hidden;
-  margin-bottom: 5px;
 }
 
 .cardtitle {
@@ -67,4 +66,6 @@
 
 .carddescription {
   white-space: break-spaces;
+  line-height: 22px;
+  text-align: justify;
 }
