--- a/plantin/src/Webpages/Profile.css
+++ b/plantin/src/Webpages/Profile.css
@@ -59,7 +59,6 @@
   height: 145px;
   padding: 0px 10px;
   overflow: hidden;
-  margin-bottom: 5px;
 }
 
 .profilecardtitle {
@@ -69,6 +68,8 @@
 
 .profilecarddescription {
   white-space: break-spaces;
+  line-height: 22px;
+  text-align: justify;
 }
 
 .profileedtbtn {
