--- a/plantin/src/Webpages/AdminPage.css
+++ b/plantin/src/Webpages/AdminPage.css
@@ -68,9 +68,12 @@
 }
 
 .admincarddescription {
+  display: -webkit-box;
+  -webkit-line-clamp: 5;
+  -webkit-box-orient: vertical;
   white-space: break-spaces;
-  line-height: 22px;
   text-align: justify;
+  overflow: hidden;
 }
 
 .admindelebtn {
