--- a/plantin/src/Webpages/Post.css
+++ b/plantin/src/Webpages/Post.css
@@ -65,7 +65,10 @@
 }
 
 .carddescription {
+  display: -webkit-box;
+  -webkit-line-clamp: 5;
+  -webkit-box-orient: vertical;
   white-space: break-spaces;
-  line-height: 22px;
   text-align: justify;
+  overflow: hidden;
 }
