--- a/plantin/src/Webpages/Profile.css
+++ b/plantin/src/Webpages/Profile.css
@@ -67,9 +67,12 @@
 }
 
 .profilecarddescription {
+  display: -webkit-box;
+  -webkit-line-clamp: 5;
+  -webkit-box-orient: vertical;
   white-space: break-spaces;
-  line-height: 22px;
   text-align: justify;
+  overflow: hidden;
 }
 
 .profileedtbtn {
