--- a/plantin/src/Webpages/AdminPage.css
+++ b/plantin/src/Webpages/AdminPage.css
@@ -32,7 +32,7 @@
 }
 
 .admincardscontainer .username p {
-  color: rgb(85, 85, 85);
+  color: rgb(50, 50, 50);
   font-weight: bold;
 }
 
@@ -47,12 +47,14 @@
 .admincardimage {
   width: 100%;
   height: 165px;
+  padding: 10px;
 }
 
 .adminimage {
   width: 100%;
   height: 100%;
   object-fit: fill;
+  border-radius: 10px;
 }
 
 .admincardcontent {
