--- a/plantin/src/Webpages/Post.css
+++ b/plantin/src/Webpages/Post.css
@@ -37,24 +37,26 @@
 }
 
 .cardscontainer .username p {
-  color: rgb(85, 85, 85);
+  color: rgb(50, 50, 50);
   font-weight: bold;
 }
 
 .cardimage {
   width: 100%;
-  height: 166px;
+  height: 165px;
+  padding: 10px;
 }
 
 .image {
   width: 100%;
   height: 100%;
   object-fit: fill;
+  border-radius: 10px;
 }
 
 .cardcontent {
   width: 100%;
-  height: 144px;
+  height: 145px;
   padding: 0px 10px;
   overflow: hidden;
 }
