modified:   plantin/src/App.js 	modified:   plantin/src/Webpages/Accountpopup.js 	modified:   plantin/src/Webpages/AdminLogin.js 	modified:   plantin/src/Webpages/AdminPage.js 	modified:   plantin/src/Webpages/Category.js 	modified:   plantin/src/Webpages/LoggedUsers.css 	modified:   plantin/src/Webpages/LoggedUsers.js 	modified:   plantin/src/Webpages/Login.js 	modified:   plantin/src/Webpages/Post.js 	modified:   plantin/src/Webpages/PostComments.js 	modified:   plantin/src/Webpages/PostCommentsEdit.js 	modified:   plantin/src/Webpages/PostInDetail.js 	modified:   plantin/src/Webpages/Profile.js 	modified:   plantin/src/Webpages/ProfileEdit.js 	modified:   plantin/src/Webpages/SignedUsers.css 	modified:   plantin/src/Webpages/SignedUsers.js 	modified:   plantin/src/Webpages/Signup.js 	modified:   plantin/src/Webpages/Uploadpopup.js 	modified:   server/index.js

--- a/plantin/src/Webpages/SignedUsers.css
+++ b/plantin/src/Webpages/SignedUsers.css
@@ -9,7 +9,8 @@
   width: 100%;
 }
 
-.usersdetail {
+.signedusers .usersdetail {
+  width: max-content;
   height: 40px;
   text-align: start;
   padding-left: 20px;
