modified:   plantin/src/Webpages/ProfileEdit.css 	modified:   plantin/src/Webpages/ProfileEdit.js 	modified:   server/index.js

--- a/plantin/src/Webpages/ProfileEdit.css
+++ b/plantin/src/Webpages/ProfileEdit.css
@@ -125,8 +125,8 @@
   margin-top: 10px;
   margin-right: 15px;
   border: none;
-  color: white;
-  background-color: #0275d8;
+  color: black;
+  background-color: white;
   border-radius: 5px;
 }
 .editaddcategory .addcategorysubmit {
