--- a/plantin/src/Webpages/MainRouter.css
+++ b/plantin/src/Webpages/MainRouter.css
@@ -8,6 +8,7 @@
   align-items: center;
   position: fixed;
   z-index: 9;
+  overflow: hidden;
 }
 
 .buttoncontainer {
@@ -41,15 +42,17 @@
 }
 
 .logo {
-  width: 80px;
+  width: 130px;
   height: max-content;
-  margin-left: 50px;
+  margin-left: 40px;
+  background-color: transparent;
 }
 
 .logo img {
   width: 100%;
   height: 100%;
   object-fit: contain;
+  background-color: transparent;
 }
 
 .uploadButton,
