--- a/plantin/src/Webpages/Accountpopupcss.css
+++ b/plantin/src/Webpages/Accountpopupcss.css
@@ -50,3 +50,31 @@
 .navpageslink:hover .arrowicon {
   right: 2px;
 }
+
+@media screen and (max-width: 480px) {
+  .accountpopupmain {
+    background-color: white;
+    width: 140px;
+    height: max-content;
+    position: fixed;
+    z-index: 8;
+    top: 70px;
+    right: 30px;
+    border-radius: 10px;
+    padding: 0px 15px;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .accountpopupmain {
+    background-color: white;
+    width: 140px;
+    height: max-content;
+    position: fixed;
+    z-index: 8;
+    top: 70px;
+    right: 30px;
+    border-radius: 10px;
+    padding: 0px 15px;
+  }
+}
