--- a/plantin/src/Webpages/MainRouter.css
+++ b/plantin/src/Webpages/MainRouter.css
@@ -59,3 +59,79 @@
 .Icon:hover {
   cursor: pointer;
 }
+
+@media screen and (max-width: 480px) {
+  .logo {
+    width: 100px;
+    height: max-content;
+    margin-left: 20px;
+    background-color: transparent;
+  }
+
+  .uploadButton {
+    margin-right: 30px;
+    background-color: white;
+    color: black;
+    border: none;
+    border-radius: 10px;
+    width: 90px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+  }
+
+  .Icon {
+    margin-right: 30px;
+    background-color: white;
+    color: black;
+    border: none;
+    border-radius: 10px;
+    width: 50px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+  }
+  .iconsPerson {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .logo {
+    width: 100px;
+    height: max-content;
+    margin-left: 20px;
+    background-color: transparent;
+  }
+
+  .uploadButton {
+    margin-right: 30px;
+    background-color: white;
+    color: black;
+    border: none;
+    border-radius: 10px;
+    width: 90px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+  }
+
+  .Icon {
+    margin-right: 30px;
+    background-color: white;
+    color: black;
+    border: none;
+    border-radius: 10px;
+    width: 50px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+  }
+  .iconsPerson {
+    display: none;
+  }
+}
