--- a/plantin/src/Webpages/MainRouter.css
+++ b/plantin/src/Webpages/MainRouter.css
@@ -6,7 +6,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  position: fixed;
+  position: sticky;
+  top: 0rem;
   z-index: 9;
   overflow: hidden;
 }
