modified:   plantin/src/Webpages/Home.css 	modified:   plantin/src/Webpages/MainRouter.css

--- a/plantin/src/Webpages/MainRouter.css
+++ b/plantin/src/Webpages/MainRouter.css
@@ -6,8 +6,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  position: sticky;
-  top: 0rem;
+  position: fixed;
   z-index: 9;
   overflow: hidden;
 }
